force-app/main/default/objects/RTL_Household_History_and_Approval__c/RTL_Household_History_and_Approval__c.object-meta.xml
<CustomObject>
    <label>Household History and Approval</label>
    <nameField>
        <displayFormat>HH-{00000000}</displayFormat>
        <label>Household History and Approval Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Household History and Approvals</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>