force-app/main/default/objects/RTL_Household_History_and_Approval__c/fields/RTL_Approval_Submit_User__c.field-meta.xml
<CustomField>
    <fullName>RTL_Approval_Submit_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>User that submits the approval request that is the intended recipient for the email response.</description>
    <label>Approval Submit User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Household_History_and_Approvals3</relationshipName>
    <type>Lookup</type>
</CustomField>