force-app/main/default/objects/RTL_Household_History_and_Approval__c/fields/RTL_Approver_Link__c.field-meta.xml
<CustomField>
    <fullName>RTL_Approver_Link__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Household_History_and_Approvals1</relationshipName>
    <type>Lookup</type>
</CustomField>