force-app/main/default/objects/RTL_Household_History_and_Approval__c/fields/RTL_Date_Approved__c.field-meta.xml
<CustomField>
    <fullName>RTL_Date_Approved__c</fullName>
    <description>Date this change was Approved</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Approved Date</label>
    <type>Date</type>
</CustomField>