force-app/main/default/objects/RTL_Household_History_and_Approval__c/fields/RTL_Date_Requested__c.field-meta.xml
<CustomField>
    <fullName>RTL_Date_Requested__c</fullName>
    <description>Date change was requested</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Requested Date</label>
    <type>Date</type>
</CustomField>