force-app/main/default/objects/RTL_Household_History_and_Approval__c/fields/RTL_Field_Changed__c.field-meta.xml
<CustomField>
    <fullName>RTL_Field_Changed__c</fullName>
    <description>Field to be changed</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Changed Field</label>
    <length>100</length>
    <type>Text</type>
</CustomField>