force-app/main/default/objects/RTL_Household_History_and_Approval__c/fields/RTL_Field_Label__c.field-meta.xml
<CustomField>
    <fullName>RTL_Field_Label__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Field Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>