force-app/main/default/objects/RTL_Household_History_and_Approval__c/fields/RTL_HH_Req_Benefit_Package__c.field-meta.xml
<CustomField>
    <fullName>RTL_HH_Req_Benefit_Package__c</fullName>
    <description>Requested HH Benefit Package</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Benefit Package</label>
    <length>100</length>
    <type>Text</type>
</CustomField>