force-app/main/default/objects/RTL_Household_History_and_Approval__c/fields/RTL_HH_Req_Remarks__c.field-meta.xml
<CustomField>
    <fullName>RTL_HH_Req_Remarks__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Remarks</label>
    <type>TextArea</type>
</CustomField>