force-app/main/default/objects/RTL_Household_History_and_Approval__c/fields/RTL_HH_RM_BM__c.field-meta.xml
<CustomField>
    <fullName>RTL_HH_RM_BM__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>RM/BM</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Household_History_and_Approvals2</relationshipName>
    <type>Lookup</type>
</CustomField>