force-app/main/default/objects/RTL_Household_History_and_Approval__c/fields/RTL_HHM_Benefit__c.field-meta.xml
<CustomField>
    <fullName>RTL_HHM_Benefit__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To record snapshot of Household Member Benefit</description>
    <label>Benefit</label>
    <type>Checkbox</type>
</CustomField>