force-app/main/default/objects/RTL_Household_History_and_Approval__c/fields/RTL_HHM_Relationship__c.field-meta.xml
<CustomField>
    <fullName>RTL_HHM_Relationship__c</fullName>
    <description>To capture Relationship for non Primary member</description>
    <label>Relationship</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>คู่สมรส</fullName>
            </value>
            <value>
                <fullName>บิดา/มารดา</fullName>
            </value>
            <value>
                <fullName>บุตร</fullName>
            </value>
            <value>
                <fullName>พี่น้อง</fullName>
            </value>
            <value>
                <fullName>ปู่/ย่า/ตา/ยาย</fullName>
            </value>
            <value>
                <fullName>หลาน</fullName>
            </value>
            <value>
                <fullName>ญาติ</fullName>
            </value>
            <value>
                <fullName>อื่นๆ</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>