force-app/main/default/objects/RTL_Household_History_and_Approval__c/fields/RTL_Household__c.field-meta.xml
<CustomField>
    <fullName>RTL_Household__c</fullName>
    <description>Household which this History record belongs to</description>
    <label>Household</label>
    <referenceTo>RTL_Household__c</referenceTo>
    <relationshipLabel>Household History and Approvals</relationshipLabel>
    <relationshipName>Household_History_and_Approvals</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>