force-app/main/default/objects/RTL_Household_History_and_Approval__c/fields/RTL_Household_Member__c.field-meta.xml
<CustomField>
    <fullName>RTL_Household_Member__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Household member which this change is related to</description>
    <label>Household Member</label>
    <referenceTo>RTL_Household_Member__c</referenceTo>
    <relationshipLabel>Household History and Approvals</relationshipLabel>
    <relationshipName>Household_History_and_Approvals</relationshipName>
    <type>Lookup</type>
</CustomField>