force-app/main/default/objects/RTL_Household_History_and_Approval__c/fields/RTL_Member_Lookup_Account__c.field-meta.xml
<CustomField>
    <fullName>RTL_Member_Lookup_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to Account field to retain Household Membership data.</description>
    <label>Household Member</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Household History and Approvals</relationshipLabel>
    <relationshipName>Household_History_and_Approvals</relationshipName>
    <type>Lookup</type>
</CustomField>