force-app/main/default/objects/RTL_Household_History_and_Approval__c/fields/RTL_New_Value__c.field-meta.xml
<CustomField>
    <fullName>RTL_New_Value__c</fullName>
    <description>New value to be set</description>
    <encryptionScheme>None</encryptionScheme>
    <label>New Value</label>
    <type>TextArea</type>
</CustomField>