force-app/main/default/objects/RTL_Household_History_and_Approval__c/fields/RTL_New_Value_Formula_Display__c.field-meta.xml
<CustomField>
    <fullName>RTL_New_Value_Formula_Display__c</fullName>
    <formula>IF( OR(RTL_Field_Label__c = &quot;Delete Household&quot;, RTL_Field_Label__c = &quot;Delete Member&quot;), 
&quot;&quot;
,  RTL_New_Value__c )</formula>
    <label>New Value</label>
    <type>Text</type>
</CustomField>