force-app/main/default/objects/RTL_Household_History_and_Approval__c/fields/RTL_Outcome__c.field-meta.xml
<CustomField>
    <fullName>RTL_Outcome__c</fullName>
    <description>Outcome of this Household History</description>
    <label>Outcome</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
                <default>true</default>
                <label>Pending</label>
            </value>
            <value>
                <fullName>New</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>