force-app/main/default/objects/RTL_Household_History_and_Approval__c/fields/RTL_Prev_Value__c.field-meta.xml
<CustomField>
    <fullName>RTL_Prev_Value__c</fullName>
    <description>Old value of this change</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Old Value</label>
    <type>TextArea</type>
</CustomField>