force-app/main/default/objects/RTL_Household_History_and_Approval__c/fields/RTL_Section__c.field-meta.xml
<CustomField>
    <fullName>RTL_Section__c</fullName>
    <formula>IF(CONTAINS(RTL_Field_Label__c,&apos;Household&apos;),&apos;Household&apos;, $Label.RTL_Member )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Section</label>
    <type>Text</type>
</CustomField>