force-app/main/default/objects/RTL_Household_History_and_Approval__c/fields/RTL_Sent_to_Approval__c.field-meta.xml
<CustomField>
    <fullName>RTL_Sent_to_Approval__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag to track if record is sent to approval</description>
    <label>Sent to Approval</label>
    <type>Checkbox</type>
</CustomField>