force-app/main/default/objects/RTL_Household_History_and_Approval__c/fields/RTL_Sent_to_Requestor__c.field-meta.xml
<CustomField>
    <fullName>RTL_Sent_to_Requestor__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sent to Requestor</label>
    <type>Checkbox</type>
</CustomField>