force-app/main/default/objects/RTL_Household_History_and_Approval__c/fields/RTL_User_Requesting__c.field-meta.xml
<CustomField>
    <fullName>RTL_User_Requesting__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>User requesting for the change</description>
    <label>Requestor</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Household_History_and_Approvals</relationshipName>
    <type>Lookup</type>
</CustomField>