force-app/main/default/objects/RTL_Household_History_and_Approval__c/recordTypes/Approved_Household.recordType-meta.xml
<RecordType>
    <fullName>Approved_Household</fullName>
    <active>true</active>
    <description>Approved Household</description>
    <label>Approved Household</label>
</RecordType>