force-app/main/default/objects/RTL_Household_History_and_Approval__c/recordTypes/Approved_Member.recordType-meta.xml
<RecordType>
    <fullName>Approved_Member</fullName>
    <active>true</active>
    <description>Approved Member</description>
    <label>Approved Member</label>
</RecordType>