force-app/main/default/objects/RTL_Household_History_and_Approval__c/recordTypes/New_Household.recordType-meta.xml
<RecordType>
    <fullName>New_Household</fullName>
    <active>true</active>
    <description>New Household</description>
    <label>New Household</label>
</RecordType>