force-app/main/default/objects/RTL_Household_History_and_Approval__c/recordTypes/New_Member.recordType-meta.xml
<RecordType>
    <fullName>New_Member</fullName>
    <active>true</active>
    <description>New Member</description>
    <label>New Member</label>
</RecordType>