force-app/main/default/objects/RTL_Household_History_and_Approval__c/recordTypes/Pending_Household.recordType-meta.xml
<RecordType>
    <fullName>Pending_Household</fullName>
    <active>true</active>
    <description>Pending Household</description>
    <label>Pending Household</label>
</RecordType>