force-app/main/default/objects/RTL_Household_History_and_Approval__c/recordTypes/Pending_Member.recordType-meta.xml
<RecordType>
    <fullName>Pending_Member</fullName>
    <active>true</active>
    <description>Pending Member</description>
    <label>Pending Member</label>
</RecordType>