force-app/main/default/objects/RTL_Household_History_and_Approval__c/recordTypes/Rejected_Household.recordType-meta.xml
<RecordType>
    <fullName>Rejected_Household</fullName>
    <active>true</active>
    <description>Rejected Household</description>
    <label>Rejected Household</label>
</RecordType>