force-app/main/default/objects/RTL_Household_History_and_Approval__c/recordTypes/Rejected_Member.recordType-meta.xml
<RecordType>
    <fullName>Rejected_Member</fullName>
    <active>true</active>
    <description>Rejected Member</description>
    <label>Rejected Member</label>
</RecordType>